--- a/index.html
+++ b/index.html
@@ -199,6 +199,14 @@
                     <h3 class="text-xl font-bold mb-4 px-2">音楽</h3>
                     <p class="text-slate-500 text-sm leading-relaxed font-light px-2">まだ、作ってない、、、、、、</p>
                 </div>
+                <!-- Hobby Item 6 -->
+                <div class="wafu-card group cursor-pointer bg-white/50 p-4 rounded-xl">
+                    <div class="relative aspect-[4/5] overflow-hidden rounded-lg mb-8">
+                        <img src="images/nature.png" alt="Music" class="img-reveal w-full h-full object-cover">
+                    </div>
+                    <h3 class="text-xl font-bold mb-4 px-2">ゼルダ</h3>
+                    <p class="text-slate-500 text-sm leading-relaxed font-light px-2">まだ、作ってない、、、、、、</p>
+                </div>
             </div>
         </section>
 
