need to add sounds

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <p class="text-[10px] tracking-[0.6em] uppercase font-light">Welcome</p>
             </div>
             <h1 class="text-6xl md:text-9xl font-bold mb-8 tracking-tighter leading-tight">
-                My、<br class="md:hidden">Pageへ。
+                Takuma's<br class="md:hidden"> Log
             </h1>
             <p class="text-base md:text-lg font-light text-blue-100/70 max-w-2xl mx-auto mb-16 tracking-[0.3em]">
                 ようこそ
@@ -136,10 +136,10 @@
                             広島大学 クォーク物理学研究室
                         </p>
                         <p>
-                            うーーー
+                            物理学科の学生です。
                         </p>
                         <p>
-                            うーーーー
+                            建築物を見るのが好きです。
                         </p>
                     </div>
                     <div class="mt-16 flex gap-12 items-center">
