--- a/programing/main.html
+++ b/programing/main.html
@@ -171,6 +171,20 @@
                     </div>
                 </div>
             </a>
+            <!-- Tool 6 -->
+            <a href="/mochimochino.github.io/timer/timer.html" class="wafu-card p-10 rounded-r-xl group flex items-start gap-10">
+                <div class="tool-index transition-colors duration-500">05</div>
+                <div>
+                    <span class="text-[9px] text-blue-900/40 tracking-[0.4em] font-bold uppercase mb-2 block"></span>
+                    <h3 class="text-2xl font-bold mb-4 text-blue-900 group-hover:text-blue-700 transition-colors">タイマー</h3>
+                    <p class="text-slate-500 text-sm leading-relaxed font-light mb-6">
+                        ブラウザで使用可能なタイマー
+                    </p>
+                    <div class="flex items-center gap-2 text-blue-900 font-bold text-[10px] tracking-[0.2em] opacity-40 group-hover:opacity-100 transition-all">
+                        VIEW DOCUMENTATION <span class="transform group-hover:translate-x-2 transition-transform">→</span>
+                    </div>
+                </div>
+            </a>
 
         </div>
 
@@ -216,7 +230,7 @@
             </a>
         </div>
 
-                <!-- Single Hero Visual (Image remains only here as a theme anchor) -->
+        <!-- Single Hero Visual (Image remains only here as a theme anchor) -->
         <div class="relative group mb-20 overflow-hidden rounded-2xl shadow-xl bg-slate-900 h-64">
             <img src="/mochimochino.github.io/images/programing.png" alt="Tech Background" class="w-full h-full object-cover opacity-50 grayscale group-hover:grayscale-0 transition-all duration-1000">
             <div class="absolute inset-0 flex items-center justify-center text-white">
@@ -235,6 +249,32 @@
                     <h3 class="text-2xl font-bold mb-4 text-blue-900 group-hover:text-blue-700 transition-colors">Flathub</h3>
                     <p class="text-slate-500 text-sm leading-relaxed font-light mb-6">
                         Flathub
+                    </p>
+                    <div class="flex items-center gap-2 text-blue-900 font-bold text-[10px] tracking-[0.2em] opacity-40 group-hover:opacity-100 transition-all">
+                        VIEW DOCUMENTATION <span class="transform group-hover:translate-x-2 transition-transform">→</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <!-- Single Hero Visual (Image remains only here as a theme anchor) -->
+        <div class="relative group mb-20 overflow-hidden rounded-2xl shadow-xl bg-slate-900 h-64">
+            <img src="/mochimochino.github.io/images/programing.png" alt="Tech Background" class="w-full h-full object-cover opacity-50 grayscale group-hover:grayscale-0 transition-all duration-1000">
+            <div class="absolute inset-0 flex items-center justify-center text-white">
+                <h2 class="text-3xl font-bold tracking-widest uppercase">Network</h2>
+            </div>
+        </div>
+
+        <!-- Package manager List Grid (Text Centric) -->
+        <div class="space-y-6">
+            
+            <!-- PM 1 -->
+            <a href="package_manager/flathub.html" class="wafu-card p-10 rounded-r-xl group flex items-start gap-10">
+                <div class="tool-index transition-colors duration-500">01</div>
+                <div>
+                    <span class="text-[9px] text-blue-900/40 tracking-[0.4em] font-bold uppercase mb-2 block">Network</span>
+                    <h3 class="text-2xl font-bold mb-4 text-blue-900 group-hover:text-blue-700 transition-colors">Network document</h3>
+                    <p class="text-slate-500 text-sm leading-relaxed font-light mb-6">
+                        Network
                     </p>
                     <div class="flex items-center gap-2 text-blue-900 font-bold text-[10px] tracking-[0.2em] opacity-40 group-hover:opacity-100 transition-all">
                         VIEW DOCUMENTATION <span class="transform group-hover:translate-x-2 transition-transform">→</span>
