--- a/hiroshima_grid.html
+++ b/hiroshima_grid.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>トラブルシューティング - My page</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+JP:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <style>
-        body { font-family: 'Inter', 'Noto Sans JP', sans-serif; }
-        .section-title { @apply text-3xl font-bold text-center mb-12 text-gray-800; }
-        /* 戻るボタン用のスタイルを追加 */
-        .back-link { @apply inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded-lg transition-colors; }
+        body {
+            font-family: 'Inter', 'Noto Sans JP', sans-serif;
+        }
+
+        .section-title {
+            @apply text-3xl font-bold text-center mb-12 text-gray-800;
+        }
+
+        .back-link {
+            @apply inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded-lg transition-colors;
+        }
     </style>
 </head>
+
 <body class="bg-gray-100">
 
     <header class="bg-white shadow-md">
@@ -28,7 +39,8 @@
             <div class="mb-8">
                 <h3 class="text-lg font-semibold text-gray-700 mb-2">Q. ページが正しく表示されません。</h3>
                 <p class="text-gray-600">
-                    A. まずはページの再読み込み（リロード）をお試しください。それでも改善しない場合は、ブラウザのキャッシュをクリアすることで解決する場合があります。また、お使いのブラウザが最新版であるかもご確認ください。
+                    A.
+                    まずはページの再読み込み（リロード）をお試しください。それでも改善しない場合は、ブラウザのキャッシュをクリアすることで解決する場合があります。また、お使いのブラウザが最新版であるかもご確認ください。
                 </p>
             </div>
 
@@ -38,7 +50,7 @@
                     A. サイトの更新直後には、一時的にリンクが機能しないことがあります。時間をおいて再度お試しください。問題が続く場合は、お手数ですがページ下部の連絡先までお知らせいただけると幸いです。
                 </p>
             </div>
-            
+
             <div class="mb-8">
                 <h3 class="text-lg font-semibold text-gray-700 mb-2">Q. 画像が表示されません。</h3>
                 <p class="text-gray-600">
@@ -62,4 +74,5 @@
     </script>
 
 </body>
+
 </html>
