add zeliji config

--- a/kubuntu/desktop.html
+++ b/kubuntu/desktop.html
@@ -68,7 +68,7 @@
             <span class="text-[10px] tracking-[0.5em] text-blue-900/40 uppercase block mb-4">Desktop Style</span>
             <h1 class="text-4xl font-bold section-title">デスクトップ環境のカスタマイズ</h1>
             <p class="mt-6 text-slate-600 font-light leading-relaxed">
-                Kubuntu (KDE Plasma) をベースに、洗練されたモダンなデザインへとデスクトップ全体をカスタマイズしています。
+                Kubuntu (KDE Plasma) をベースに、洗練されたモダンなデザインへとデスクトップ全体をカスタマイズしている。
             </p>
         </div>
 
@@ -78,8 +78,7 @@
             <div class="bg-white/50 p-8 rounded-xl border border-blue-900/5">
                 <h3 class="text-xl font-bold mb-4">コンセプトと参考</h3>
                 <p class="text-slate-600 font-light leading-relaxed mb-6">
-                    KDE Plasmaの柔軟性を活かし、テーマやパネルの設定を細かく調整することで、自分にとって最も使いやすい「My
-                    style」を構築しています。以下の記事をもとに、透明度の設定やドックの配置などを参考にしています。
+                    KDE Plasmaの柔軟性を活かし、テーマやパネルの設定を細かく調整して、自分にとって最も使いやすい「My style」を構築。以下の記事をもとに、透明度やドックの配置などを参考にしている。
                 </p>
                 <a href="https://linux-jp.org/?p=15801" target="_blank"
                     class="inline-flex items-center gap-3 bg-white text-blue-900 px-6 py-3 rounded-lg shadow-sm border border-blue-900/10 hover:shadow-md hover:border-blue-900/30 transition-all font-semibold text-sm">
@@ -95,8 +94,8 @@
         <section>
             <h2 class="text-2xl font-bold border-b border-blue-900/10 pb-4 mb-8">テーマカラー (Moonfly)</h2>
             <p class="text-slate-600 font-light leading-relaxed mb-6">
-                ターミナル（Ghostty）でも使用している <strong>Moonfly</strong>
-                に色合いを寄せ、全体的な統一感を持たせています。ダークで落ち着いたトーンは長時間の作業でも目が疲れにくく、集中力を保つことができます。
+                ターミナル（Ghostty）でも使っている <strong>Moonfly</strong>
+                に色合いを寄せ、全体的な統一感を持たせている。ダークで落ち着いたトーンにすることで、長時間の作業でも目が疲れにくく、集中力を保てるようにした。
             </p>
             <div class="flex gap-4">
                 <div class="w-16 h-16 rounded-full bg-[#080808] shadow-inner border border-white/10"></div>
