--- a/kubuntu/index.html
+++ b/kubuntu/index.html
@@ -79,7 +79,7 @@
             <span class="text-[10px] tracking-[0.5em] text-blue-900/40 uppercase block mb-4">My linux setup</span>
             <h1 class="text-4xl font-bold section-title">Kubuntu Environment</h1>
             <p class="mt-8 text-slate-600 font-light leading-relaxed max-w-2xl mx-auto">
-                普段使用している開発環境（Kubuntu）のデスクトップテーマや、ターミナルの設定についてまとめています。
+                普段使用している開発環境（Kubuntu）のデスクトップテーマや、ターミナル設定の個人的なまとめ。
             </p>
         </div>
 
